refactor: add a script to shorten transpilation to JS

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/kevinadhiguna/typescript.git",
   "author": "kevinadhiguna <hi.kevinadhiguna@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "tsc": "yarn tsc index.ts"
+  },
   "devDependencies": {
     "typescript": "^4.2.4"
   }
